# AI-Resume-Analyzer

ai-resume-analyzer/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ai-resume-analyzer/alembic/: env.py
ai-resume-analyzer/app/: main.py
ai-resume-analyzer/app/api/v1/: dependencies.py  routes.py
ai-resume-analyzer/app/core/: config.py  logging.py
ai-resume-analyzer/app/models/: db.py  resume.py
ai-resume-analyzer/app/repositories/: resume_repo.py
ai-resume-analyzer/app/schemas/: resume.py
ai-resume-analyzer/app/services/: analyzer.py  embeddings.py
ai-resume-analyzer/app/tests/: test_api.py  test_services.py
ai-resume-analyzer/app/utils/: parsing.py
ai-resume-analyzer/scripts/: run_local.sh
